src/objects/Puppy_Location__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Capacity</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pupies__c</fullName>
        <label>Number of Pupies</label>
        <summaryForeignKey>Puppy_Reservation__c.Puppy_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Spots_Left__c</fullName>
        <formula>Capacity__c - Number_of_Pupies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spots Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Puppy Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puppy Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>